--- a/.github/workflows/ci_homelede_default.yml
+++ b/.github/workflows/ci_homelede_default.yml
@@ -70,11 +70,12 @@ jobs:
         #git clone $REPO_URL -b $REPO_BRANCH openwrt
         #git clone https://github.com/xiaoqingfengATGH/HomeLede.git -b k5 HomeLede
         git clone $REPO_URL -b $REPO_BRANCH HomeLede
+        ln -sf HomeLede openwrt
         cd HomeLede
         git checkout -b k5 origin/k5
-        ln -sf /workdir/HomeLede /workdir/openwrt
-        ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
-        ln -sf /workdir/openwrt $GITHUB_WORKSPACE/HomeLede
+        #ln -sf /workdir/HomeLede /workdir/openwrt
+        #ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
+        #ln -sf /workdir/openwrt $GITHUB_WORKSPACE/HomeLede
 
 
     - name: Clone source code,ljx
